# nidhinetra

./: .gitignore  README.md  pyproject.toml
core/: ingest.py
nidhinetra/: main.py
nidhinetra/core/: ingest.py
nidhinetra/tests/: test_ingest.py
streamlit_app/: app.py
tests/: test_ingest.py
tests/chroma_store/04d639f2-28a8-4ea9-8605-547966f433b3/: index_metadata.pickle
